# LAI_Pro

./: .gitignore  README.md  USER_GUIDE.docx  USER_GUIDE.md  pyproject.toml
laipro/: __init__.py  biophysical.py  calibrate.py  cli.py  clumping.py  config.py  fapar.py  features.py  gapfraction.py  geometry.py  gui.py  gui_controller.py  io.py  learned_segment.py  masking.py  pipeline.py  preprocess.py  report.py  segment.py
packaging/: README.md  build.ps1  laipro.spec  laipro_app.py
