[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "laipro"
version = "0.1.0"
description = "Reproducible leaf-area (PAI/LAI/FCOVER) processing from downward fish-eye (DHP) crop photographs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AAFC / AUG Signals" }]
keywords = ["LAI", "PAI", "FCOVER", "DHP", "hemispherical", "canopy", "remote sensing", "agriculture"]

# Core dependencies for the command-line processing pipeline (no GUI, no GPU).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "rawpy>=0.19",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Desktop GUI (napari + Qt). Install with:  pip install "laipro[gui]"
gui = ["napari>=0.5", "magicgui>=0.8", "qtpy>=2.4", "PyQt6>=6.6"]
# Optional GPU-accelerated learned segmentation (MLP backend) and SAM.
# On Python 3.14 the CUDA wheel comes from the cu128 index; see README.
gpu = ["torch>=2.2"]

[project.scripts]
laipro = "laipro.cli:main"

[tool.setuptools]
packages = ["laipro"]
